<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/hallopumpkin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#78909C">

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:textColor="#E65100"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/tagline" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tagline"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="#E65100"
            android:text="@string/description" />

        <TextView
            android:id="@+id/phonelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:text="phone: "/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/description"
            android:layout_toRightOf="@+id/phonelabel"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phonelabel"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:text="@string/emailLabel" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phonelabel"
            android:layout_toRightOf="@+id/emailLabel"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:text="@string/website" />

    </RelativeLayout>

</android.widget.LinearLayout>